# intelli-odm

./: .dockerignore  .env  .env.template  .gitattributes  .gitignore  AGENT_OUTPUT_STRUCTURE.md  AGENT_OUTPUT_TABLES.md  BRANCH_MERGE_PLAN.md  CEO_DEMO_README.md  COST_MARGIN_ENHANCEMENTS.md  DEPENDENCY_FIX_SUMMARY.md  DIAGNOSE_LANGSMITH.md  DOCKER-BUILD-OPTIMIZATION.md  DOCKER-CROSS-PLATFORM.md  DOCKER-PLATFORM-SUMMARY.md  DOCKER-QUICKREF.md  DOCKER-SETUP-SUMMARY.md  DOCKER.md  Dockerfile  FIXES_APPLIED.md  HITL_INTEGRATION_SUMMARY.md  HITL_WORKFLOW_GUIDE.md  INSTALL.md  LANGSMITH_SETUP.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README_ODM.md  README_SETUP.md  README_UI.md  REINDEX_GUIDE.md  Readme.md  SETUP.md  SETUP_SUMMARY.md  UI_IMPLEMENTATION_SUMMARY.md  VARIANCE_THRESHOLD_CONFIGURATION.md  app.py  check_langsmith_env.py  config.example  create_custom_scenario.py  debug_api.py  (+43 more)
agents/: __init__.py  attribute_analogy_agent.py  data_ingestion_agent.py  data_ingestion_agent.py.backup  demand_forecasting_agent.py  hitl_workflow.py  orchestrator_agent.py  procurement_allocation_agent.py
audit-logs/: run_20251206_152319.json  run_20251206_154351.json  run_20251206_155508.json  run_20251206_155528.json  run_20251206_160005.json  run_20251206_160559.json  run_20251206_172427.json  run_20251206_174240.json  run_20251206_174340.json
backend/: main.py
backups/: cost_data_v20251206_144249_metadata.json  cost_data_v20251206_151300_metadata.json  inventory_data_v20251206_144202_metadata.json  inventory_data_v20251206_144220_metadata.json  inventory_data_v20251206_145616_metadata.json  inventory_data_v20251206_151202_metadata.json  new_articles_data_v20251206_142147_metadata.json  new_articles_data_v20251206_151112_metadata.json  new_articles_data_v20251206_151328_metadata.json  new_articles_data_v20251206_155508_metadata.json  price_data_v20251206_144236_metadata.json  price_data_v20251206_151215_metadata.json  sales_data_v20251206_144140_metadata.json  sales_data_v20251206_151146_metadata.json
config/: agent_configs.py  settings.py
data/chroma_db/: chroma.sqlite3
data/chroma_db/330572de-53d6-4134-96d8-02e436f76be1/: index_metadata.pickle
data/chromadb/: chroma.sqlite3
data/sample/: dirty_odm_input.csv  odm_historical_dataset_5000.csv  store_stock_data.csv
data/sample2/: inventory.csv  pricing.csv  products.csv  sales.csv  stores.csv
data/sample_old/: data_summary.json  sales.csv
docs/: agent_specifications.md  api_reference.md  architecture.md  configuration_guide.md  data_flow_architecture.md  development_guide.md  openai_setup.md  project_structure.md  user_manual.md
examples/: intelli_odm_demo.ipynb  simple_example.py
forecast-results/: run_20251206_145833_results.json  run_20251206_160005_results.json  run_20251206_160559_results.json  run_20251206_172427_results.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
scripts/: generate_test_data.py  list_knowledge_base.py  populate_knowledge_base.py  reset_knowledge_base.py
static/css/: style.css
static/js/: app.js
templates/: index.html
utils/: audit_logger.py  data_models.py  data_summarizer.py  llm_client.py  location_factors.py  ollama_client.py  prompt_builder.py
